Rca 74 (#59)
* feat: pass clientId info to auth-server login page

* feat: add google login button

* feat: pass clientId info to auth-server login page

* feat: add google login auth credentials

* feat: add google api client library for auth-server

* feat: add error handling for social login

* feat: social login authorization and token exchange

* feat: social login account creation and binding

* test: unit testing

* docs: update docs

* remove console.log

* refactor: StringUtils.isBlank

* refactor: socialUserId is unique, no need to bundle with socialProvider

* cicd: update to include google client secret in build

* docs: update docs

---------

Co-authored-by: Kuan <chenkuansk@ad.garmin.com>